@@ -1,3 +1,7 @@
+2009-10-03  6.5.6-8 Nick Wellnhofer <wellnhofer@aevum...>
+  * adds some missing libraries to the LIBADD entries in coders/Makefile.am,
+    filters/Makefile.am and wand/Makefile.am.
+
 2009-10-01  6.5.6-7 Cristy  <quetzlzacatenango@image...>
   * Don't use group4 compression if the image is truecolor.
   * If image is gray, write grayscale DPX images.
